--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,13 +47,16 @@ dependencies {
 
     implementation 'androidx.fragment:fragment-ktx:1.5.5'
 
+    // Javafaker
     implementation 'com.github.javafaker:javafaker:1.0.2'
 
-    implementation 'com.github.bumptech.glide:glide:4.14.2'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
+    // Glide
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
 
-    implementation "com.google.dagger:hilt-android:2.44"
-    kapt "com.google.dagger:hilt-compiler:2.44"
+    // Hilt
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-compiler:$hilt_version"
 }
 
 kapt {
