--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,9 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.MVVMTest"
         tools:targetApi="31"
-        android:name=".App">
+        android:name=".ui.App">
         <activity
-            android:name="com.example.mycontacts.view.MainActivity"
+            android:name="com.example.mycontacts.ui.main_activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
