--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.MVVMTest"
         tools:targetApi="31"
-        android:name=".ui.App">
+        android:name=".ui.app.App">
         <activity
             android:name="com.example.mycontacts.ui.main_activity.MainActivity"
             android:exported="true">
