--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,10 @@ buildscript {
     ext {
         glide_version = '4.14.2'
         hilt_version = '2.44'
+        nav_version = '2.5.3'
+    }
+    dependencies {
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
 }
 
