--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.MVVMTest"
         tools:targetApi="31"
-        android:name=".ui.app.App">
+        android:name=".ui.app.App"
+        android:supportsRtl="true">
         <activity
             android:name="com.example.mycontacts.ui.main_activity.MainActivity"
             android:exported="true">
