--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         glide_version = '4.14.2'
         hilt_version = '2.44'
         nav_version = '2.5.3'
+        room_version = '2.5.1'
     }
     dependencies {
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
