--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         hilt_version = '2.44'
         nav_version = '2.5.3'
         room_version = '2.5.1'
+        lifecycle_version = '2.6.1'
     }
     dependencies {
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
