--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,10 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.MVVMTest"
         tools:targetApi="31"
-        android:name=".ui.app.App"
+        android:name=".presenter.ui.app.App"
         android:supportsRtl="true">
         <activity
-            android:name="com.example.mycontacts.ui.main_activity.MainActivity"
+            android:name="com.example.mycontacts.presenter.ui.main_activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
